--- a/index.html
+++ b/index.html
@@ -12,181 +12,140 @@
       referrerpolicy="no-referrer"
     />
     <title>Document</title>
-
   </head>
   <body>
     <div class="topbar">
-      <div class="wrapper target" >
+      <div class="wrapper target">
         <div class="left target">
-        <i class="fa-brands fa-square-x-twitter"></i>
-        <i class="fa-brands fa-square-instagram"></i>
-        <i class="fa-brands fa-square-facebook"></i>
-        <i class="fa-brands fa-square-pinterest"></i>
+          <i class="fa-brands fa-square-x-twitter"></i>
+          <i class="fa-brands fa-square-instagram"></i>
+          <i class="fa-brands fa-square-facebook"></i>
+          <i class="fa-brands fa-square-pinterest"></i>
         </div>
         <div class="center">
-        <a href="/">HOME</a>
-        <a href="/about">ABOUT</a>
-        <a href="/register">REGISTER</a>
-        <a href="/login">LOGIN</a>
-        <a href="pages/add.html">ADD</a>
+          <a href="/">HOME</a>
+          <a href="/about">ABOUT</a>
+          <a href="/register">REGISTER</a>
+          <a href="/login">LOGIN</a>
+          <a href="pages/add.html">ADD</a>
         </div>
         <div class="right">
-        <span>
-            <img src="public/resimler/user/user-1.png" alt="user">
-        </span>
-        <div class="searchEngine" id="searchEngine">
-            <input type="text" placeholder="...">
+          <span>
+            <img src="public/resimler/user/user-1.png" alt="user" />
+          </span>
+          <div class="searchEngine" id="searchEngine">
+            <input type="text" placeholder="..." />
             <i class="fa-solid fa-magnifying-glass" id="searchIcon"></i>
-          </div>  
+          </div>
         </div>
-      </div>    
+      </div>
     </div>
 
-    
-  <header class="header target">
-    <img src="public/resimler/background/home.jpg" alt="background">
-    <h1>My Blog</h1>
-    <h3>It's a Dream</h3>
-  </header>
+    <header class="header target">
+      <img src="public/resimler/background/home.jpg" alt="background" />
+      <h1>My Blog</h1>
+      <h3>It's a Dream</h3>
+    </header>
 
-  <div class="home">
-    <div class="wrapper">
-      <div class="posts">
+    <div class="home">
+      <div class="wrapper">
+        <div class="posts">
+          <div class="post target">
+            <h1>Title</h1>
+            <img src="public/resimler/background/content-1.jpg" alt="content" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              saepe quis, illo obcaecati suscipit quod nulla maiores, dolore,
+              debitis esse deleniti quisquam nisi dolorem ullam! Recusandae enim
+              officiis nulla fuga! Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Doloremque alias harum aspernatur veniam libero
+              possimus a aut ea necessitatibus ipsum, blanditiis illo tempora
+              nulla perferendis, magni enim consequatur ut earum?
+            </p>
+            <div class="authorAndDate">
+              <span>Zeynep Yiner</span>
+              <span>24.07.2024</span>
+            </div>
+          </div>
 
+          <div class="post target">
+            <h1>Title</h1>
+            <img src="public/resimler/background/content-1.jpg" alt="content" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              saepe quis, illo obcaecati suscipit quod nulla maiores, dolore,
+              debitis esse deleniti quisquam nisi dolorem ullam! Recusandae enim
+              officiis nulla fuga! Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Doloremque alias harum aspernatur veniam libero
+              possimus a aut ea necessitatibus ipsum, blanditiis illo tempora
+              nulla perferendis, magni enim consequatur ut earum?
+            </p>
+            <div class="authorAndDate">
+              <span>Zeynep Yiner</span>
+              <span>24.07.2024</span>
+            </div>
+          </div>
 
-        <div class="post target">
-          <h1>Tittle</h1>
-          <img src="public/resimler/background/content-1.jpg" alt="content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sapiente voluptatem, aliquid provident, autem quae debitis et maiores fugit atque enim assumenda! Deleniti voluptatem assumenda minima perspiciatis tempora explicabo enim?
-          Quam quo odit id voluptatibus porro minima, sint cum hic aperiam quos consequatur facere accusantium, officia temporibus magni fuga inventore sit ullam, ut in quia voluptas. Nemo qui blanditiis nihil.
-          Est dolor odit ut reprehenderit sit, quam enim vitae voluptatum tempore quae quasi deleniti magnam, laboriosam libero numquam maxime! Autem vero harum sapiente. Deleniti, fugit voluptatibus ipsum perspiciatis tempore voluptate.
-          Eligendi voluptatem qui totam asperiores, incidunt error dolores quos rem molestiae animi sunt quae? Dolore minus libero ab totam nostrum debitis quod vitae ipsa, quae perferendis consequatur dolorem illo est.
-          Tenetur autem sint aliquam praesentium? Assumenda laborum sit unde modi eum delectus nihil vel adipisci fuga ab incidunt dicta, at voluptate magnam perspiciatis. Qui tempora repellat maxime reiciendis error suscipit!
-          Illo rem voluptatem nisi, fuga odit omnis temporibus esse unde, architecto fugiat a! Esse optio nam ipsam nulla reiciendis cumque beatae quam. Libero accusantium sint ex ullam, quasi nemo quia?
-          Corrupti repellendus non, libero sapiente totam similique nihil maiores tenetur? Eius veniam nobis sit minima aliquam? Nesciunt voluptate rem, magni voluptatem nisi excepturi unde iure soluta modi sint molestias veritatis!
-          Aspernatur voluptatibus dolorum, facere quas eveniet, maxime totam impedit maiores, iure itaque eum necessitatibus architecto magnam voluptates dolores vitae assumenda! Rerum blanditiis nulla aliquid consequatur cum quo odio fugit numquam.
-          Similique reiciendis vero ex, illo sed tempore dolorum maxime natus, nisi possimus quaerat voluptatem soluta voluptatum ut? Quisquam in ducimus corrupti et expedita molestias ratione minus incidunt! Quis, dolorum natus!
-          </p>
-          <div class="authorAndDate">
-            <span>Zeynep Yiner</span>
-            <span>24.07.2024</span>
+          <div class="post target">
+            <h1>Title</h1>
+            <img src="public/resimler/background/content-1.jpg" alt="content" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              saepe quis, illo obcaecati suscipit quod nulla maiores, dolore,
+              debitis esse deleniti quisquam nisi dolorem ullam! Recusandae enim
+              officiis nulla fuga! Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Doloremque alias harum aspernatur veniam libero
+              possimus a aut ea necessitatibus ipsum, blanditiis illo tempora
+              nulla perferendis, magni enim consequatur ut earum?
+            </p>
+            <div class="authorAndDate">
+              <span>Zeynep Yiner</span>
+              <span>24.07.2024</span>
+            </div>
+          </div>
+
+          <div class="post target">
+            <h1>Title</h1>
+            <img src="public/resimler/background/content-1.jpg" alt="content" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              saepe quis, illo obcaecati suscipit quod nulla maiores, dolore,
+              debitis esse deleniti quisquam nisi dolorem ullam! Recusandae enim
+              officiis nulla fuga! Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Doloremque alias harum aspernatur veniam libero
+              possimus a aut ea necessitatibus ipsum, blanditiis illo tempora
+              nulla perferendis, magni enim consequatur ut earum?
+            </p>
+            <div class="authorAndDate">
+              <span>Zeynep Yiner</span>
+              <span>24.07.2024</span>
+            </div>
           </div>
         </div>
 
-        <div class="post target">
-          <h1>Tittle</h1>
-          <img src="public/resimler/background/content-1.jpg" alt="content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sapiente voluptatem, aliquid provident, autem quae debitis et maiores fugit atque enim assumenda! Deleniti voluptatem assumenda minima perspiciatis tempora explicabo enim?
-          Quam quo odit id voluptatibus porro minima, sint cum hic aperiam quos consequatur facere accusantium, officia temporibus magni fuga inventore sit ullam, ut in quia voluptas. Nemo qui blanditiis nihil.
-          Est dolor odit ut reprehenderit sit, quam enim vitae voluptatum tempore quae quasi deleniti magnam, laboriosam libero numquam maxime! Autem vero harum sapiente. Deleniti, fugit voluptatibus ipsum perspiciatis tempore voluptate.
-          Eligendi voluptatem qui totam asperiores, incidunt error dolores quos rem molestiae animi sunt quae? Dolore minus libero ab totam nostrum debitis quod vitae ipsa, quae perferendis consequatur dolorem illo est.
-          Tenetur autem sint aliquam praesentium? Assumenda laborum sit unde modi eum delectus nihil vel adipisci fuga ab incidunt dicta, at voluptate magnam perspiciatis. Qui tempora repellat maxime reiciendis error suscipit!
-          Illo rem voluptatem nisi, fuga odit omnis temporibus esse unde, architecto fugiat a! Esse optio nam ipsam nulla reiciendis cumque beatae quam. Libero accusantium sint ex ullam, quasi nemo quia?
-          Corrupti repellendus non, libero sapiente totam similique nihil maiores tenetur? Eius veniam nobis sit minima aliquam? Nesciunt voluptate rem, magni voluptatem nisi excepturi unde iure soluta modi sint molestias veritatis!
-          Aspernatur voluptatibus dolorum, facere quas eveniet, maxime totam impedit maiores, iure itaque eum necessitatibus architecto magnam voluptates dolores vitae assumenda! Rerum blanditiis nulla aliquid consequatur cum quo odio fugit numquam.
-          Similique reiciendis vero ex, illo sed tempore dolorum maxime natus, nisi possimus quaerat voluptatem soluta voluptatum ut? Quisquam in ducimus corrupti et expedita molestias ratione minus incidunt! Quis, dolorum natus!
-          </p>
-        <div class="authorAndDate">
-            <span>Zeynep Yiner</span>
-            <span>24.07.2024</span>
-        </div>
-        </div>
+        <div class="sidebar">
+          <div class="area target">
+            <h3>Who I Am</h3>
+            <img src="public/resimler/user/user-2.png" alt="user" />
+            <div class="categories">
+              <span>#art</span>
+              <span>#design</span>
+              <span>#paint</span>
+              <span>#culture</span>
+            </div>
+          </div>
 
-        <div class="post target">
-          <h1>Tittle</h1>
-          <img src="public/resimler/background/content-1.jpg" alt="content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sapiente voluptatem, aliquid provident, autem quae debitis et maiores fugit atque enim assumenda! Deleniti voluptatem assumenda minima perspiciatis tempora explicabo enim?
-          Quam quo odit id voluptatibus porro minima, sint cum hic aperiam quos consequatur facere accusantium, officia temporibus magni fuga inventore sit ullam, ut in quia voluptas. Nemo qui blanditiis nihil.
-          Est dolor odit ut reprehenderit sit, quam enim vitae voluptatum tempore quae quasi deleniti magnam, laboriosam libero numquam maxime! Autem vero harum sapiente. Deleniti, fugit voluptatibus ipsum perspiciatis tempore voluptate.
-          Eligendi voluptatem qui totam asperiores, incidunt error dolores quos rem molestiae animi sunt quae? Dolore minus libero ab totam nostrum debitis quod vitae ipsa, quae perferendis consequatur dolorem illo est.
-          Tenetur autem sint aliquam praesentium? Assumenda laborum sit unde modi eum delectus nihil vel adipisci fuga ab incidunt dicta, at voluptate magnam perspiciatis. Qui tempora repellat maxime reiciendis error suscipit!
-          Illo rem voluptatem nisi, fuga odit omnis temporibus esse unde, architecto fugiat a! Esse optio nam ipsam nulla reiciendis cumque beatae quam. Libero accusantium sint ex ullam, quasi nemo quia?
-          Corrupti repellendus non, libero sapiente totam similique nihil maiores tenetur? Eius veniam nobis sit minima aliquam? Nesciunt voluptate rem, magni voluptatem nisi excepturi unde iure soluta modi sint molestias veritatis!
-          Aspernatur voluptatibus dolorum, facere quas eveniet, maxime totam impedit maiores, iure itaque eum necessitatibus architecto magnam voluptates dolores vitae assumenda! Rerum blanditiis nulla aliquid consequatur cum quo odio fugit numquam.
-          Similique reiciendis vero ex, illo sed tempore dolorum maxime natus, nisi possimus quaerat voluptatem soluta voluptatum ut? Quisquam in ducimus corrupti et expedita molestias ratione minus incidunt! Quis, dolorum natus!
-          </p>
-          <div class="authorAndDate">
-            <span>Zeynep Yiner</span>
-            <span>24.07.2024</span>
+          <div class="area target">
+            <h3>Your Space</h3>
+            <a href="/admin/add">Add Post</a>
+            <a href="#">Your Perfonce</a>
+            <a href="#">Number of Views</a>
           </div>
         </div>
-
-        <div class="post target">
-          <h1>Tittle</h1>
-          <img src="public/resimler/background/content-1.jpg" alt="content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sapiente voluptatem, aliquid provident, autem quae debitis et maiores fugit atque enim assumenda! Deleniti voluptatem assumenda minima perspiciatis tempora explicabo enim?
-          Quam quo odit id voluptatibus porro minima, sint cum hic aperiam quos consequatur facere accusantium, officia temporibus magni fuga inventore sit ullam, ut in quia voluptas. Nemo qui blanditiis nihil.
-          Est dolor odit ut reprehenderit sit, quam enim vitae voluptatum tempore quae quasi deleniti magnam, laboriosam libero numquam maxime! Autem vero harum sapiente. Deleniti, fugit voluptatibus ipsum perspiciatis tempore voluptate.
-          Eligendi voluptatem qui totam asperiores, incidunt error dolores quos rem molestiae animi sunt quae? Dolore minus libero ab totam nostrum debitis quod vitae ipsa, quae perferendis consequatur dolorem illo est.
-          Tenetur autem sint aliquam praesentium? Assumenda laborum sit unde modi eum delectus nihil vel adipisci fuga ab incidunt dicta, at voluptate magnam perspiciatis. Qui tempora repellat maxime reiciendis error suscipit!
-          Illo rem voluptatem nisi, fuga odit omnis temporibus esse unde, architecto fugiat a! Esse optio nam ipsam nulla reiciendis cumque beatae quam. Libero accusantium sint ex ullam, quasi nemo quia?
-          Corrupti repellendus non, libero sapiente totam similique nihil maiores tenetur? Eius veniam nobis sit minima aliquam? Nesciunt voluptate rem, magni voluptatem nisi excepturi unde iure soluta modi sint molestias veritatis!
-          Aspernatur voluptatibus dolorum, facere quas eveniet, maxime totam impedit maiores, iure itaque eum necessitatibus architecto magnam voluptates dolores vitae assumenda! Rerum blanditiis nulla aliquid consequatur cum quo odio fugit numquam.
-          Similique reiciendis vero ex, illo sed tempore dolorum maxime natus, nisi possimus quaerat voluptatem soluta voluptatum ut? Quisquam in ducimus corrupti et expedita molestias ratione minus incidunt! Quis, dolorum natus!
-          </p>
-          <div class="authorAndDate">
-            <span>Zeynep Yiner</span>
-            <span>24.07.2024</span>
-          </div>
-        </div>
-
-        <div class="post target">
-          <h1>Tittle</h1>
-          <img src="public/resimler/background/content-1.jpg" alt="content">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sapiente voluptatem, aliquid provident, autem quae debitis et maiores fugit atque enim assumenda! Deleniti voluptatem assumenda minima perspiciatis tempora explicabo enim?
-          Quam quo odit id voluptatibus porro minima, sint cum hic aperiam quos consequatur facere accusantium, officia temporibus magni fuga inventore sit ullam, ut in quia voluptas. Nemo qui blanditiis nihil.
-          Est dolor odit ut reprehenderit sit, quam enim vitae voluptatum tempore quae quasi deleniti magnam, laboriosam libero numquam maxime! Autem vero harum sapiente. Deleniti, fugit voluptatibus ipsum perspiciatis tempore voluptate.
-          Eligendi voluptatem qui totam asperiores, incidunt error dolores quos rem molestiae animi sunt quae? Dolore minus libero ab totam nostrum debitis quod vitae ipsa, quae perferendis consequatur dolorem illo est.
-          Tenetur autem sint aliquam praesentium? Assumenda laborum sit unde modi eum delectus nihil vel adipisci fuga ab incidunt dicta, at voluptate magnam perspiciatis. Qui tempora repellat maxime reiciendis error suscipit!
-          Illo rem voluptatem nisi, fuga odit omnis temporibus esse unde, architecto fugiat a! Esse optio nam ipsam nulla reiciendis cumque beatae quam. Libero accusantium sint ex ullam, quasi nemo quia?
-          Corrupti repellendus non, libero sapiente totam similique nihil maiores tenetur? Eius veniam nobis sit minima aliquam? Nesciunt voluptate rem, magni voluptatem nisi excepturi unde iure soluta modi sint molestias veritatis!
-          Aspernatur voluptatibus dolorum, facere quas eveniet, maxime totam impedit maiores, iure itaque eum necessitatibus architecto magnam voluptates dolores vitae assumenda! Rerum blanditiis nulla aliquid consequatur cum quo odio fugit numquam.
-          Similique reiciendis vero ex, illo sed tempore dolorum maxime natus, nisi possimus quaerat voluptatem soluta voluptatum ut? Quisquam in ducimus corrupti et expedita molestias ratione minus incidunt! Quis, dolorum natus!
-          </p>
-          <div class="authorAndDate">
-            <span>Zeynep Yiner</span>
-            <span>24.07.2024</span>
-          </div>
-        </div>
-
-
       </div>
-
-      <div class="sidebar">
-        <div class="area target">
-          <h3>Who I Am</h3>
-          <img src="public/resimler/user/user-2.png" alt="user">
-          <div class="categories">
-            <span>#culture</span>
-            <span>#coding</span>
-            <span>#design</span>
-            <span>#art</span>
-          </div>
-        </div>
-
-        <div class="area target">
-          <h3>Your Space</h3>
-          <a href="/admin/add">Add Post</a>
-          <a href="#">Your Performance</a>
-          <a href="#">Number of Views</a>
-        </div>
-
-      </div>
-
-
-
-
-
     </div>
 
-
-  </div>
-
-
-
-
-  <script src="public/js/search.js"></script>
-  <script src="public/js/scroll.js"></script>
-
+    <script src="public/js/search.js"></script>
+    <script src="public/js/scroll.js"></script>
   </body>
 </html>
