--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <title>Document</title>
   </head>
+
   <body>
     <div class="topbar">
       <div class="wrapper target">
@@ -24,7 +25,7 @@
         </div>
         <div class="center">
           <a href="/">HOME</a>
-          <a href="/about">ABOUT</a>
+          <a href="/pages/about.html">ABOUT</a>
           <a href="/register">REGISTER</a>
           <a href="/login">LOGIN</a>
           <a href="pages/add.html">ADD</a>
