--- a/pages/about.html
+++ b/pages/about.html
@@ -26,9 +26,9 @@
         <div class="center">
           <a href="/">HOME</a>
           <a href="/pages/about.html">ABOUT</a>
-          <a href="/register">REGISTER</a>
-          <a href="/login">LOGIN</a>
-          <a href="pages/add.html">ADD</a>
+          <a href="/pages/register.html">REGISTER</a>
+          <a href="/pages/login.html">LOGIN</a>
+          <a href="/pages/add.html">ADD</a>
         </div>
         <div class="right">
           <span>
