--- a/pages/add.html
+++ b/pages/add.html
@@ -32,7 +32,7 @@
          </div>
          <div class="right">
             <span>
-               <img src="../public/img/user/user-1.png" alt="user">
+               <img src="../public/resimler/user/user-1.png" alt="user">
             </span>
             <div class="searchEngine" id="searchEngine">
                <input type="text" placeholder="...">
